# BibleApp

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: BibleFrame.h
src/: BibleFrame.cpp  main.cpp
